# internal/types/rbac/role.go
@@ -3,9 +3,15 @@ package rbac
 /*
 * @Author: zouyx
 * @Email: 1003941268@qq.com
-* @Date:   2025/10/31 下午4:40
+* @Date:   2025/11/15 上午11:06
 * @Package:
  */
+type ListRoleRequest struct {
+	Name     string `form:"name,optional" json:"name" binding:"-" example:"johndoe"`
+	Status   uint8  `form:"status,optional" json:"status" binding:"-" example:"1"`
+	Page     int    `form:"page,default=1" json:"page" binding:"required" example:"1" default:"1"`
+	PageSize int    `form:"pageSize,default=10" json:"pageSize" binding:"required" example:"10" default:"10"`
+}
 
 type CreateRoleRequest struct {
 	Name        string `json:"name,omitempty" example:"管理员"`
