# pkg/response/response.go
@@ -1,7 +1,6 @@
 package response
 
 import (
-	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -14,15 +13,12 @@ type Response struct {
 	Data    interface{} `json:"data"`    // 数据
 }
 type PaginatedResponse struct {
-	Code       int              `json:"code"`    // 业务状态码
-	Message    string           `json:"message"` // 提示信息
-	Data       any              `json:"data"`
-	Pagination PaginationParams `json:"pagination"`
-}
-type PaginationParams struct {
-	Page     int   `json:"page"`
-	PageSize int   `json:"page_size"`
-	Total    int64 `json:"total"`
+	Code     int    `json:"code"`    // 业务状态码
+	Message  string `json:"message"` // 提示信息
+	Data     any    `json:"data"`
+	Page     int    `json:"page"`
+	PageSize int    `json:"page_size"`
+	Total    int64  `json:"total"`
 }
 
 // Success 成功响应
@@ -36,16 +32,13 @@ func Success(c *gin.Context, data interface{}) {
 
 // SuccessPage 分页响应
 func SuccessPage(c *gin.Context, data any, page, pageSize int, total int64) {
-	fmt.Println("response ", data)
 	c.JSON(http.StatusOK, PaginatedResponse{
-		Code:    200,
-		Message: "success",
-		Data:    data,
-		Pagination: PaginationParams{
-			Page:     page,
-			PageSize: pageSize,
-			Total:    total,
-		},
+		Code:     200,
+		Message:  "success",
+		Data:     data,
+		Page:     page,
+		PageSize: pageSize,
+		Total:    total,
 	})
 }
 
